--- a/1.html
+++ b/1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="EUC-KR">
+<meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
@@ -13,9 +13,9 @@
 	<li>javascript</li>
 </ol>
 <ul>
-	<li><a href="1.html">OneÆäÀÌÁö</a></li>
-	<li><a href="3.html">TwoÆäÀÌÁö</a></li>
-	<li><a href="4.html">ThreeÆäÀÌÁö</a></li>
+	<li><a href="1.html">Oneí˜ì´ì§€</a></li>
+	<li><a href="3.html">Twoí˜ì´ì§€</a></li>
+	<li><a href="4.html">Threeí˜ì´ì§€</a></li>
 </ul>
 <h1>HTML</h1>
 <p>The primary goal of the workshop is to bring together providers 
@@ -23,8 +23,8 @@ of <strong>Machine Learning</strong> tools and frameworks with Web platform prac
 to enrich the Open Web 
 Platform with better foundations for machine learning.</p>
 
-<a href="https://www.w3.org/">html °ø½Ä »ç¿ë ¼³¸í¼­</a>
-<img src="ÄÚµù.png" width="100%" height="100%">
+<a href="https://www.w3.org/">html ê³µì‹ ì‚¬ìš© ì„¤ëª…ì„œ</a>
+<img src="ì½”ë”©.png" width="100%" height="100%">
 
 
 </body>
