--- a/2.html
+++ b/2.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="EUC-KR">
+<meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>µÎ¹øÂ° ÆäÀÌÁö ½ÇÇè</h1>
+	<h1>ë‘ë²ˆì§¸ íŽ˜ì´ì§€ ì‹¤í—˜</h1>
 	<ul>
-	<li><a href="1.html">OneÆäÀÌÁö</a></li>
-	<li><a href="3.html">TwoÆäÀÌÁö</a></li>
-	<li><a href="4.html">ThreeÆäÀÌÁö</a></li>
+	<li><a href="1.html">OneíŽ˜ì´ì§€</a></li>
+	<li><a href="3.html">TwoíŽ˜ì´ì§€</a></li>
+	<li><a href="4.html">ThreeíŽ˜ì´ì§€</a></li>
 </ul>
 </body>
 </html>
