--- a/1.html
+++ b/1.html
@@ -20,11 +20,11 @@
 <h1>HTML</h1>
 <p>The primary goal of the workshop is to bring together providers 
 of <strong>Machine Learning</strong> tools and frameworks with Web platform practitioners 
-to enrich the Open Web 
-Platform with better foundations for machine learning.</p>
+to enrich the Open Web</p> 
+<p>Platform with better foundations for machine learning.</p>
 
 <a href="https://www.w3.org/">html 공식 사용 설명서</a>
-<img src="코딩.png" width="100%" height="100%">
+<img src="https://cfnimage.commutil.kr/phpwas/restmb_allidxmake.php?idx=3&simg=2018082719141105121dd55077bc212323473.jpg" width="80%" height="80%">
 
 
 </body>
